@@ -61,6 +61,7 @@
 #include <nuttx/irq.h>
 #include <nuttx/arch.h>
 
+#include <net/ethernet.h>
 #include <net/uip/uip.h>
 #include <net/uip/uip-arp.h>
 #include <net/uip/uip-arch.h>
@@ -1725,8 +1726,8 @@ int dm9x_initialize(void)
 
   /* Read the MAC address */
 
-  mptr = g_dm9x[0].dm_dev.d_mac.addr;
-  for (i = 0, j = DM9X_PAB0; i < 6; i++, j++)
+  mptr = g_dm9x[0].dm_dev.d_mac.ether_addr_octet;
+  for (i = 0, j = DM9X_PAB0; i < ETHER_ADDR_LEN; i++, j++)
     {
       mptr[i] = getreg(j);
     }
