@@ -272,3 +272,8 @@
 	* Found and fixed several problems in uIP when compiled for ARM with optimization.
 
 0.3.5 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
+
+	* Added inet_ntoa() and ether_ntoa()
+	* Added netdev_foreach() to support traversal of registered network devices
+	* Added support for 'ifconfig' command to NSH (examples/nsh)
+	* Moved MAC and ethernet definitions to net/ethernet.h
